k8s-on-premise-cloud/OPA-GateKeeper/service-rule/BlockedNonEndpointsService-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocked-non-endpoints-service
  namespace: test
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: blocked-non-endpoints-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: tcp
  type: ClusterIP
