k8s-on-premise-cloud/OPA-GateKeeper/service-rule/ServiceBlockedExternalIPs-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bkocked-external-ips-service
  namespace: movie-web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: user-service
  externalIPs:
    - 171.239.11.33
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP  
      name: tcp
