k8s-on-premise-cloud/OPA-GateKeeper/service-rule/ServiceRequiredNetworkPolicy-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: required-network-policies-service
  namespace: movie-web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: user-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP  
      name: tcp
  type: ClusterIP
  sessionAffinity: None
