k8s-on-premise-cloud/OPA-GateKeeper/service-rule/ServiceBlockedExternalIPs-Constrant.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedExternalIPs
metadata:
  name: k8s-allowed-external-ips
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["movie-web","test"]
  parameters:
    message: "Allowed external IPs in limit on CIDR resources"
  validationFailureAction: enforce
